addSignUpFeature
