# api_metacritic_game/models/usersModel.js
@@ -14,6 +14,20 @@ module.exports = (instance) => {
         type: DataTypes.STRING,
         allowNull: false
       },
+      hashedPassword: {
+        type: DataTypes.STRING,
+        allowNull: false,
+      },
+      email: {
+        type: DataTypes.STRING,
+        allowNull: false,
+        unique: true,
+        // validate: {
+        //   isEmail: {
+        //     msg: "Must be a valid email address"
+        //   }
+        // }
+      },
     },
     {
       timestamps: false,
